--- a/FinalProj_App/app/src/main/AndroidManifest.xml
+++ b/FinalProj_App/app/src/main/AndroidManifest.xml
@@ -9,17 +9,17 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
-            <intent-filter>
+        <activity android:name=".LoginActivity"
+                  android:label="@string/title_activity_login"
+                  android:theme="@style/AppTheme.NoActionBar">
+        <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity
-                android:name=".PagerActivity"
-                android:label="@string/title_activity_pager"
-                android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".PagerActivity"
+                  android:label="@string/title_activity_pager"
+                  android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
 
