--- a/FinalProj_App/app/src/main/AndroidManifest.xml
+++ b/FinalProj_App/app/src/main/AndroidManifest.xml
@@ -9,18 +9,47 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity"
-                  android:label="@string/title_activity_login"
-                  android:theme="@style/AppTheme.NoActionBar">
-        <intent-filter>
+        <activity
+                android:name=".LoginActivity"
+                android:label="@string/title_activity_login"
+                android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".PagerActivity"
-                  android:label="@string/title_activity_pager"
-                  android:theme="@style/AppTheme.NoActionBar">
+        <activity
+                android:name=".PagerActivity"
+                android:label="@string/title_activity_pager"
+                android:theme="@style/AppTheme.NoActionBar">
         </activity>
+
+        <service
+                android:name=".MyFirebaseMessagingService"
+                android:enabled="true"
+                android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+        <!--
+             Set custom default icon. This is used when no icon is set for incoming notification messages.
+            See README(https://goo.gl/l4GJaQ) for more.
+        -->
+        <meta-data
+                android:name="com.google.firebase.messaging.default_notification_icon"
+                android:resource="@mipmap/firebase_icon"/>
+        <!--
+             Set color used with incoming notification messages. This is used when no color is set for the incoming
+             notification message. See README(https://goo.gl/6BKBk7) for more.
+        -->
+        <meta-data
+                android:name="com.google.firebase.messaging.default_notification_color"
+                android:resource="@color/colorAccent"/>
+        <meta-data
+                android:name="com.google.firebase.messaging.default_notification_channel_id"
+                android:value="@string/default_notification_channel_id"/>
     </application>
 
 </manifest>
