--- a/FP_Pi/app/src/main/AndroidManifest.xml
+++ b/FP_Pi/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.jkw7.pdx.web.finalproject_pi">
 
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.google.android.things.permission.MANAGE_INPUT_DRIVERS" />
+    <uses-permission android:name="com.google.android.things.permission.USE_PERIPHERAL_IO" />
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
@@ -20,6 +25,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
+            <!-- TODO: Decide if I want to do this
+             Uncomment the following intent filter block to enable this activity to
+             launch automatically on boot, and re-launch if the app terminates.
+           -->
+            <!--
+                        <intent-filter>
+                            <action android:name="android.intent.action.MAIN"/>
+                            <category android:name="android.intent.category.HOME"/>
+                            <category android:name="android.intent.category.DEFAULT"/>
+                        </intent-filter>
+            -->
         </activity>
     </application>
 
