--- a/FinalProj_App_v2/app/src/main/AndroidManifest.xml
+++ b/FinalProj_App_v2/app/src/main/AndroidManifest.xml
@@ -16,9 +16,9 @@
     <uses-feature android:name="android.hardware.microphone" android:required="true" />
     <application
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@mipmap/spyglass_solid_v2"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
+            android:roundIcon="@mipmap/spyglass_solid_v2"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
 
@@ -58,7 +58,7 @@
         -->
         <meta-data
                 android:name="com.google.firebase.messaging.default_notification_icon"
-                android:resource="@mipmap/firebase_icon"/>
+                android:resource="@mipmap/spyglass_trans_v1"/>
         <!--
              Set color used with incoming notification messages. This is used when no color is set for the incoming
              notification message. See README(https://goo.gl/6BKBk7) for more.
